welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:8: error: not found: value i
  };    return i
               ^